--- a/ddclient/Dockerfile
+++ b/ddclient/Dockerfile
@@ -49,9 +49,9 @@ RUN /home/patch.sh
 RUN \
   mkdir /etc/ddclient && \
   mkdir /var/cache/ddclient && \
-  cp sample-etc_rc.d_init.d_ddclient.ubuntu /etc/init.d/ddclient && \
+  cp ddclient-3.8.2/sample-etc_rc.d_init.d_ddclient.ubuntu /etc/init.d/ddclient && \
   update-rc.d ddclient defaults && \
-  mv sample-etc_ddclient.conf /etc/ddclient.conf-sample && \
+  mv ddclient-3.8.2/sample-etc_ddclient.conf /etc/ddclient.conf-sample && \
   ln -s /config/ddclient.conf /etc/ddclient.conf
 
 #Add required Dependencies for FreeDNS
